PHP login: Made a working system for logging in using php.